2011-10-17  Kent Tamura  <tkent@chromium.org>

        [Chromium] Test expectation update

        * platform/chromium/test_expectations.txt:
        Correct a dupe.

2011-10-17  Jochen Eisinger  <jochen@chromium.org>

        Verify that the URL to be opened in the new window is passed by dispatchCreateWindow down to createView.
        https://bugs.webkit.org/show_bug.cgi?id=68803

        Reviewed by Nate Chapin.

        * platform/chromium/fast/loader/create-view-target-blank-expected.txt: Added.
        * platform/chromium/fast/loader/create-view-target-blank.html: Added.
        * platform/chromium/fast/loader/resources/done.html: Added.

2011-10-17  Tom Sepez  <tsepez@chromium.org>

        XSSAuditor bypass with remote script ending in ? character
        https://bugs.webkit.org/show_bug.cgi?id=70255

        Reviewed by Daniel Bates.

        Fix XSSAuditor bypass where unterminated src="" attribute could pick up
        text from page causing failed XSS detection.  Constrain match to domain
        portions of src attribute only.

        * http/tests/security/xssAuditor/script-tag-with-source-unterminated-expected.txt: Added.
        * http/tests/security/xssAuditor/script-tag-with-source-unterminated.html: Added.

2011-10-17  Kent Tamura  <tkent@chromium.org>

        [Chromium] Test expectation update

        * platform/chromium/test_expectations.txt:
        fallback-orientation.html is failing on Linux too.

2011-10-17  Ojan Vafai  <ojan@chromium.org>

        Test cleanups after http://trac.webkit.org/changeset/97707.

        * platform/chromium/test_expectations.txt:
        * platform/qt/fast/backgrounds/background-leakage-transforms-expected.txt:
        * platform/qt/fast/table/028-vertical-expected.txt:
        * platform/qt/fast/table/height-percent-test-vertical-expected.txt:

2011-10-17  Gavin Barraclough  <barraclough@apple.com>

        Poisoning of strict caller/arguments inappropriately poisoning "in"